// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton component should render correctly - lg 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;

exports[`Skeleton component should render correctly - md 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__md"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;

exports[`Skeleton component should render correctly - sm 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;

exports[`Skeleton component should render correctly - xs 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__xs"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;

exports[`Skeleton component should render correctly as dark 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__md ins-m-dark"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;

exports[`Skeleton component should render correctly without size 1`] = `
<div>
  <div
    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__md"
  >
    <span
      class="pf-v6-screen-reader"
    />
  </div>
</div>
`;
